[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
schedule = "^1.1.0"
config = "^0.5.1"
google-api-python-client = "^2.57.0"
google-auth-oauthlib = "^0.5.2"
pandas = "^1.4.3"
praw = "^7.6.0"
requests = "^2.28.1"
moviepy = "^1.0.3"
static-ffmpeg = "^2.2.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"